force-app/main/default/objects/Asset/fields/HRCSVC_LA_CPV_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_LA_CPV_Product__c</fullName>
    <description>SE-1173</description>
    <label>LA/CPV Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>