force-app/main/default/objects/Asset/fields/HRCSVC_Last_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Last_PM_Date__c</fullName>
    <label>Last PM Date</label>
    <type>Date</type>
</CustomField>