force-app/main/default/objects/Asset/fields/HRCSVC_Leased__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Leased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to manage leased assets and contracts related to it.</description>
    <label>Leased?</label>
    <type>Checkbox</type>
</CustomField>