force-app/main/default/objects/Asset/fields/HRCSVC_Locating__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Locating__c</fullName>
    <description>SE-1173</description>
    <label>Locating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CenTrak</fullName>
            </value>
            <value>
                <fullName>Hillrom</fullName>
            </value>
            <value>
                <fullName>Versus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>