force-app/main/default/objects/Asset/fields/HRCSVC_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Location_Name__c</fullName>
    <description>This field will be used to populate the Location Name so that can be used during the Asset Lookup/Search</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>