force-app/main/default/objects/Asset/fields/HRCSVC_MDM__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_MDM__c</fullName>
    <description>SE-1173</description>
    <label>MDM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CN700</fullName>
            </value>
            <value>
                <fullName>Customer AirWatch</fullName>
            </value>
            <value>
                <fullName>MAAS 360</fullName>
            </value>
            <value>
                <fullName>Microsoft Intune</fullName>
            </value>
            <value>
                <fullName>MobileIron</fullName>
            </value>
            <value>
                <fullName>CitrixWorks</fullName>
            </value>
            <value>
                <fullName>Skybox (AirWatch)</fullName>
            </value>
            <value>
                <fullName>XenMobile</fullName>
            </value>
            <value>
                <fullName>JAMF</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>WorkSpace One</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>