force-app/main/default/objects/Asset/fields/HRCSVC_Middleware__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Middleware__c</fullName>
    <description>SE-1173</description>
    <label>Middleware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergin</fullName>
            </value>
            <value>
                <fullName>Connexall</fullName>
            </value>
            <value>
                <fullName>Cerner AlertLink</fullName>
            </value>
            <value>
                <fullName>Amcom/Spok</fullName>
            </value>
            <value>
                <fullName>VAAM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>