force-app/main/default/objects/Asset/fields/HRCSVC_MSD_CRM_Install_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_MSD_CRM_Install_ID__c</fullName>
    <description>Created this field as part of SE-1565</description>
    <label>MSD CRM Install ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>