force-app/main/default/objects/Asset/fields/HRCSVC_Non_Standard_Config_Details__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Non_Standard_Config_Details__c</fullName>
    <description>SE-260 - The need to document non-standard configurations.</description>
    <label>Non-Standard Config Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>