force-app/main/default/objects/Asset/fields/HRCSVC_Non_Standard_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Non_Standard_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-260 -  The need to document non-standard configurations.</description>
    <label>Non-Standard Configuration?</label>
    <type>Checkbox</type>
</CustomField>