force-app/main/default/objects/Asset/fields/HRCSVC_Non_Supported_Products__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Non_Supported_Products__c</fullName>
    <description>SE-1173</description>
    <label>Non-Supported Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset_Tracking</fullName>
                <label>Asset Tracking</label>
            </value>
            <value>
                <fullName>Environmental Monitoring</fullName>
            </value>
            <value>
                <fullName>Hand Hygiene</fullName>
            </value>
            <value>
                <fullName>SmartSync</fullName>
            </value>
            <value>
                <fullName>WatchChild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>