force-app/main/default/objects/Asset/fields/HRCSVC_NPS__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>NPS</label>
    <type>Checkbox</type>
</CustomField>