force-app/main/default/objects/Asset/fields/HRCSVC_Nurse_Call__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Nurse_Call__c</fullName>
    <description>SE-1173</description>
    <label>Nurse Call</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct- Westcom (WCTP)</fullName>
            </value>
            <value>
                <fullName>Direct- Rauland Responder 5 (SIP)</fullName>
            </value>
            <value>
                <fullName>Direct- Hillrom NNC (WCTP)</fullName>
            </value>
            <value>
                <fullName>Direct- Hillrom VNC (WCTP)</fullName>
            </value>
            <value>
                <fullName>Rauland</fullName>
            </value>
            <value>
                <fullName>Rauland Responder 4</fullName>
            </value>
            <value>
                <fullName>Rauland Responder 5</fullName>
            </value>
            <value>
                <fullName>Rauland Responder 6</fullName>
            </value>
            <value>
                <fullName>Rauland Responder 7</fullName>
            </value>
            <value>
                <fullName>Hillrom NCM</fullName>
            </value>
            <value>
                <fullName>Hillrom NNC</fullName>
            </value>
            <value>
                <fullName>Hillrom VNC</fullName>
            </value>
            <value>
                <fullName>Westcom</fullName>
            </value>
            <value>
                <fullName>Dukane/GE</fullName>
            </value>
            <value>
                <fullName>GE/Telligence (Ascom)</fullName>
            </value>
            <value>
                <fullName>West Call</fullName>
            </value>
            <value>
                <fullName>Zettler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>