force-app/main/default/objects/Asset/fields/HRCSVC_Nurse_Call_EMR_Integration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Nurse_Call_EMR_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Nurse Call EMR Integration</label>
    <type>Checkbox</type>
</CustomField>