force-app/main/default/objects/Asset/fields/HRCSVC_On_Call_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_On_Call_Scheduling__c</fullName>
    <description>SE-1173</description>
    <label>On-Call Scheduling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LightningBolt</fullName>
            </value>
            <value>
                <fullName>QGenda</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>