force-app/main/default/objects/Asset/fields/HRCSVC_OS_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_OS_SW_Version__c</fullName>
    <description>SE-1173</description>
    <label>OS SW Version</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>