force-app/main/default/objects/Asset/fields/HRCSVC_PBX_Vendor__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PBX_Vendor__c</fullName>
    <description>SE-1173</description>
    <label>PBX Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Hitachi/Mitel</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Shoretell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>