force-app/main/default/objects/Asset/fields/HRCSVC_Phone_Hardware__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Phone_Hardware__c</fullName>
    <description>SE-1173</description>
    <label>Phone Hardware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iPhone 3GS</fullName>
            </value>
            <value>
                <fullName>iPhone SE (1st Gen)</fullName>
            </value>
            <value>
                <fullName>iPhone 4S</fullName>
            </value>
            <value>
                <fullName>iPhone 5</fullName>
            </value>
            <value>
                <fullName>iPhone 5S</fullName>
            </value>
            <value>
                <fullName>iPhone 6S</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>iPhone 8</fullName>
            </value>
            <value>
                <fullName>iPhone X</fullName>
            </value>
            <value>
                <fullName>iPhone XR,</fullName>
            </value>
            <value>
                <fullName>iPhone SE (2nd Gen)</fullName>
            </value>
            <value>
                <fullName>SpectraLink Pivot</fullName>
            </value>
            <value>
                <fullName>SpectraLink Versity</fullName>
            </value>
            <value>
                <fullName>Honeywell CT50</fullName>
            </value>
            <value>
                <fullName>Zebra MC40</fullName>
            </value>
            <value>
                <fullName>Zebra TC51</fullName>
            </value>
            <value>
                <fullName>Zebra TC52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>