force-app/main/default/objects/Asset/fields/HRCSVC_Phone_OS__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Phone_OS__c</fullName>
    <description>SE-1173</description>
    <label>Phone OS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>