force-app/main/default/objects/Asset/fields/HRCSVC_Physical_Server__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Physical_Server__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Physical Server?</label>
    <type>Checkbox</type>
</CustomField>