force-app/main/default/objects/Asset/fields/HRCSVC_Physiological_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Physiological_Monitoring__c</fullName>
    <description>SE-1173</description>
    <label>Physiological Monitoring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Philips</fullName>
            </value>
            <value>
                <fullName>Nihon Kohden</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Spacelabs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>