force-app/main/default/objects/Asset/fields/HRCSVC_Primary_Server_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Primary_Server_ID__c</fullName>
    <description>SE-1173</description>
    <label>Primary Server ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>