force-app/main/default/objects/Asset/fields/HRCSVC_Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Project_Manager_Name__c</fullName>
    <label>Project Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>