force-app/main/default/objects/Asset/fields/HRCSVC_Server_Record__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Server_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-1173</description>
    <label>Server Record</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>