force-app/main/default/objects/Asset/fields/HRCSVC_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipment_Date__c</fullName>
    <description>SE-1173</description>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>