force-app/main/default/objects/Asset/fields/HRCSVC_Smart_Bed__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Smart_Bed__c</fullName>
    <description>SE-1173</description>
    <label>Smart Bed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFCM</fullName>
            </value>
            <value>
                <fullName>WatchCare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>