force-app/main/default/objects/Asset/fields/HRCSVC_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Software_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-260 - To manage firmware/software version on the install base records.</description>
    <label>Software Version</label>
    <referenceTo>HRCSVC_Software_Version__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>