force-app/main/default/objects/Asset/fields/HRCSVC_Staff_Assignment__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Staff_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Staff Assignment</label>
    <type>Checkbox</type>
</CustomField>