force-app/main/default/objects/Asset/fields/HRCSVC_Status_Board__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Status Board</label>
    <type>Checkbox</type>
</CustomField>