force-app/main/default/objects/Asset/fields/HRCSVC_Storage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Storage_Capacity__c</fullName>
    <description>SE-1173</description>
    <label>Storage Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>