force-app/main/default/objects/Asset/fields/HRCSVC_TeleTrend_UI_Integration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_TeleTrend_UI_Integration__c</fullName>
    <description>SE-1173</description>
    <label>TeleTrend- UI Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic Hyperspace</fullName>
            </value>
            <value>
                <fullName>Epic Haiku</fullName>
            </value>
            <value>
                <fullName>Vocera</fullName>
            </value>
            <value>
                <fullName>Voalte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>