force-app/main/default/objects/Asset/fields/HRCSVC_UDI__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_UDI__c</fullName>
    <formula>HRCSVC_Software_Version__r.HRCSVC_UDI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Version UDI</label>
    <type>Text</type>
</CustomField>