force-app/main/default/objects/Asset/fields/HRCSVC_Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Upgrade_Date__c</fullName>
    <description>SE-1023</description>
    <label>Upgrade Date</label>
    <type>Date</type>
</CustomField>