force-app/main/default/objects/Asset/fields/HRCSVC_VADs__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_VADs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>VADs</label>
    <type>Checkbox</type>
</CustomField>