force-app/main/default/objects/Asset/fields/HRCSVC_Voalte_EMR_Integration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Voalte_EMR_Integration__c</fullName>
    <description>SE-1173</description>
    <label>Voalte EMR Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>