force-app/main/default/objects/Asset/fields/HRCSVC_Voalte_Insights__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Voalte_Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1173</description>
    <label>Voalte Insights</label>
    <type>Checkbox</type>
</CustomField>