force-app/main/default/objects/Asset/fields/HRCSVC_Voalte_Me_No_License__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Voalte_Me_No_License__c</fullName>
    <description>SE-1173</description>
    <label>Voalte Me - No. License</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>