force-app/main/default/objects/Asset/fields/HRCSVC_Voalte_One_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Voalte_One_Version__c</fullName>
    <description>SE-1173</description>
    <label>Voalte One- Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android Voalte One 3.5.2</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.5.4</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.5.5</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.6.0</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.6.1</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.6.3</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.0</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.1</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.10</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.14</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.3</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.5</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.7.9</fullName>
            </value>
            <value>
                <fullName>Android Voalte One 3.9.0</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.5.2</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.5.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.5.5</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.5.7</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.5.8</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.6.1</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.6.3</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.6.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.0</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.1</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.10</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.11</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.14</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.3</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.4</fullName>
            </value>
            <value>
                <fullName>iOS Voalte One 3.7.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>