force-app/main/default/objects/Asset/fields/HRCSVC_Wave_Clinical_Platfrom_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Wave_Clinical_Platfrom_SW_Version__c</fullName>
    <description>SE-1173</description>
    <label>Wave Clinical Platfrom- SW Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wave Clinical Platform 1.5</fullName>
            </value>
            <value>
                <fullName>Wave Clinical Platform 1.6</fullName>
            </value>
            <value>
                <fullName>WAVE Clinical Platform 1.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>