force-app/main/default/objects/Asset/fields/HRCSVC_Wireless__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Wireless__c</fullName>
    <description>SE-1173</description>
    <label>Wireless Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voalte</fullName>
            </value>
            <value>
                <fullName>Longleaf</fullName>
            </value>
            <value>
                <fullName>WCTP</fullName>
            </value>
            <value>
                <fullName>WDC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>