force-app/main/default/objects/Asset/fields/HRCSVC_Wireless_Network__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Wireless_Network__c</fullName>
    <description>SE-1173</description>
    <label>Wireless Network</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>AeroHive</fullName>
            </value>
            <value>
                <fullName>AreoScout</fullName>
            </value>
            <value>
                <fullName>BlackBox</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Meru</fullName>
            </value>
            <value>
                <fullName>Xtreme</fullName>
            </value>
            <value>
                <fullName>AIA Voalte</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>