force-app/main/default/objects/Asset/fields/Patient_Monitoring_Waveform_Integration__c.field-meta.xml
<CustomField>
    <fullName>Patient_Monitoring_Waveform_Integration__c</fullName>
    <description>SE-1173</description>
    <label>Patient Monitoring Waveform Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nihon Kohden</fullName>
            </value>
            <value>
                <fullName>Philips PIIC Classic</fullName>
            </value>
            <value>
                <fullName>Philips PIIC IX</fullName>
            </value>
            <value>
                <fullName>GE Direct Connect</fullName>
            </value>
            <value>
                <fullName>GE CareScape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>