force-app/main/default/objects/Asset/fields/Remote_Access_Method__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access_Method__c</fullName>
    <label>Remote Access Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>