force-app/main/default/objects/Asset/fields/Voalte_Experience__c.field-meta.xml
<CustomField>
    <fullName>Voalte_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voalte Experience</label>
    <type>Checkbox</type>
</CustomField>