force-app/main/default/objects/Asset/fields/Voalte_Insights_No_License__c.field-meta.xml
<CustomField>
    <fullName>Voalte_Insights_No_License__c</fullName>
    <label>Voalte Insights - No. License</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>