force-app/main/default/objects/Asset/fields/Wireless_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Vendor__c</fullName>
    <label>Wireless Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Connexall</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Voalte</fullName>
            </value>
            <value>
                <fullName>Vocera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>