force-app/main/default/objects/Asset/recordTypes/Breathe_Asset.recordType-meta.xml
<RecordType>
    <fullName>Breathe_Asset</fullName>
    <active>true</active>
    <description>Record Type for Breathe</description>
    <label>Breathe Asset</label>
</RecordType>