force-app/main/default/objects/Asset/recordTypes/HRC_Service_Asset.recordType-meta.xml
<RecordType>
    <fullName>HRC_Service_Asset</fullName>
    <active>true</active>
    <description>Asset Record Type used for HRC Field Service Assets</description>
    <label>HRC Service Asset</label>
</RecordType>