force-app/main/default/objects/Asset/recordTypes/INT_Competitor_Asset.recordType-meta.xml
<RecordType>
    <fullName>INT_Competitor_Asset</fullName>
    <active>true</active>
    <description>Competitor asset used by customers</description>
    <label>INT Competitor Asset</label>
</RecordType>