force-app/main/default/objects/Asset/recordTypes/INT_Demo_Asset.recordType-meta.xml
<RecordType>
    <fullName>INT_Demo_Asset</fullName>
    <active>true</active>
    <description>Hill-Rom asset for customer demo/evaluations</description>
    <label>INT Demo Asset</label>
</RecordType>