force-app/main/default/objects/Asset/validationRules/Cannot_change_asset_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_asset_name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c) &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change the Asset&apos;s Name.</errorMessage>
</ValidationRule>