force-app/main/default/objects/Asset/validationRules/HRCSVC_Model_Description_Installation.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Model_Description_Installation</fullName>
    <active>false</active>
    <description>SE-1173</description>
    <errorConditionFormula>IF (AND(CONTAINS(HRCFSL_Model_Description__c,&apos;INSTALLATION&apos;),NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ),OR(ISBLANK( HRCSVC_Server_Record__c ))),true, false )</errorConditionFormula>
    <errorMessage>Model Description field contains &quot;Installation&quot; then Please fill Server Record lookup field</errorMessage>
</ValidationRule>