force-app/main/default/objects/Asset/validationRules/Software_Version_field_is_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Software_Version_field_is_updated</fullName>
    <active>false</active>
    <description>Software Version field is updated by an end user</description>
    <errorConditionFormula>AND((HRCFSL_Product_Family_Desc__c = &apos;CARE COMMUNICATIONS&apos;),ISCHANGED( HRCSVC_Software_Version__c ),( HRCSVC_Software_Version__c &lt;&gt; HRCSVC_Server_Record__r.HRCSVC_Software_Version__c ),(NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c)))</errorConditionFormula>
    <errorMessage>For an Installation record, the Software Version field is inherited by it’s Server.  This makes it not editable.</errorMessage>
</ValidationRule>